# SLAM3D-Video

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/libs/: filament-utils-android-debug.aar
app/src/androidTest/java/com/mag/slam3dvideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/Calibration/: PARAconfig.yaml
app/src/main/assets/Models/: ChevroletCamaro.mtl
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: bitmap_guard.h  orb_slam_processor.h  plane.h
app/src/main/cpp/src/: bitmap_guard.cpp  orb_slam_processor.cpp  plane.cpp
app/src/main/cpp/src/jni/: orb3_jni.cpp  plane_jni.cpp  test.cpp
app/src/main/java/com/mag/slam3dvideo/: MainActivity.kt  SlamVideoApplication.kt
app/src/main/java/com/mag/slam3dvideo/math/: MatShared.kt
app/src/main/java/com/mag/slam3dvideo/orb3/: ORB3.kt  OrbSlamProcessor.kt  Plane.kt  TrackingState.kt
app/src/main/res/layout/: activity_codec.xml  activity_debug.xml  activity_main.xml  activity_map_view.xml  activity_video_viewer.xml  settings_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/mag/slam3dvideo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
orb3slam/: build.gradle
orb3slam/src/androidTest/java/com/mag/orb3slam/: ExampleInstrumentedTest.kt
orb3slam/src/main/cpp/: CMakeLists.txt
orb3slam/src/main/java/com/mag/orb3slam/: NativeLib.kt
orb3slam/src/test/java/com/mag/orb3slam/: ExampleUnitTest.kt
sdk/: build.gradle
(+72 files in other folders)
